// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditionsMenu should display a EditionsMenu with correct styling and alternative Regional Buttons 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    [
      {
        "edition": "daily-edition",
        "editionType": "Regional",
        "header": {
          "subTitle": "Daily",
          "title": "UK Daily",
        },
        "locale": "en_GB",
        "notificationUTCOffset": 1,
        "subTitle": "Published every day by 12am (GMT)",
        "title": "UK Daily",
        "topic": "au",
      },
      {
        "edition": "australian-edition",
        "editionType": "Regional",
        "header": {
          "subTitle": "Weekend",
          "title": "Austraila",
        },
        "locale": "en_AU",
        "notificationUTCOffset": 1,
        "subTitle": "Published every day by 9:30am (AEST)",
        "title": "Australia Daily",
        "topic": "au",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  style={
    {
      "height": 1334,
      "paddingHorizontal": 14,
      "paddingTop": 17,
    }
  }
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      EditionButton
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      EditionButton
    </View>
  </View>
</RCTScrollView>
`;

exports[`EditionsMenu should display a EditionsMenu with correct styling default Regional Buttons and a Special Edition Button 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    [
      {
        "edition": "daily-edition",
        "editionType": "Regional",
        "header": {
          "subTitle": "Daily",
          "title": "UK",
        },
        "locale": "en_GB",
        "notificationUTCOffset": 3,
        "subTitle": "Published from London every 
morning by 6am (GMT)",
        "title": "UK Daily",
        "topic": "uk",
      },
      {
        "buttonImageUri": "https://media.guim.co.uk/49cebb0db4a3e4d26d7d190da7be4a2e9bd7534f/0_0_103_158/103.png",
        "buttonStyle": {
          "backgroundColor": "#FEEEF7",
          "expiry": {
            "color": "#7D0068",
            "font": "GuardianTextSans-Regular",
            "lineHeight": 16,
            "size": 15,
          },
          "image": {
            "height": 134,
            "width": 87,
          },
          "subTitle": {
            "color": "#7D0068",
            "font": "GuardianTextSans-Bold",
            "lineHeight": 20,
            "size": 17,
          },
          "title": {
            "color": "#121212",
            "font": "GHGuardianHeadline-Regular",
            "lineHeight": 34,
            "size": 34,
          },
        },
        "edition": "special-edition",
        "editionType": "Special",
        "expiry": "1998-02-01T00:00:00.000Z",
        "header": {
          "subTitle": "Monthly",
          "title": "Food",
        },
        "notificationUTCOffset": 1,
        "subTitle": "Store cupboard special: 20 quick and easy lockdown suppers",
        "title": "Food
Monthly",
        "topic": "food",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  style={
    {
      "height": 1334,
      "paddingHorizontal": 14,
      "paddingTop": 17,
    }
  }
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      EditionButton
      <View
        style={
          {
            "height": 10,
          }
        }
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      EditionButton
    </View>
  </View>
</RCTScrollView>
`;

exports[`EditionsMenu should display a default EditionsMenu with correct styling and default Regional Buttons 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    [
      {
        "edition": "daily-edition",
        "editionType": "Regional",
        "header": {
          "subTitle": "Daily",
          "title": "UK",
        },
        "locale": "en_GB",
        "notificationUTCOffset": 3,
        "subTitle": "Published from London every 
morning by 6am (GMT)",
        "title": "UK Daily",
        "topic": "uk",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  style={
    {
      "height": 1334,
      "paddingHorizontal": 14,
      "paddingTop": 17,
    }
  }
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      EditionButton
    </View>
  </View>
</RCTScrollView>
`;
